--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.14"
   },
   "name": "login-lecture",
   "version": "1.0.0",
@@ -9,16 +10,15 @@
   "bin": {
     "login-lecture": "www.js"
   },
-  "devDependencies": {},
   "scripts": {
-    "start" : "node ./bin/www.js",
+    "start": "nodemon ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "keywords": [],
   "description": "",
-  "repository" : {
+  "repository": {
     "type": "git",
     "url": ""
   }
